--- a/JWTAPI/appsettings.Development.json
+++ b/JWTAPI/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "JWTConnectionString": "Server=(dblocal)\\SQLSERVER2022;Database=DBJWTAPI;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
