jwt created and set

--- a/JWTAPI/appsettings.json
+++ b/JWTAPI/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "JZ2IISdtpQcISWmAHrh2czusE98ruAgc",
+    "Issuer": "https://localhost:44317/",
+    "Audience": "https://localhost:44317/"
+  }
 }
