--- a/JWTAPI/appsettings.Development.json
+++ b/JWTAPI/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "JWTConnectionString": "Server=(dblocal)\\SQLSERVER2022;Database=DBJWTAPI;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "JWTConnectionString": "Server=.;Database=DBJWTAPI;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
